--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <nav>
-        <div class="logo">NAMA ANDA</div>
+        <div class="logo">aliceclaire</div>
         <ul>
             <li><a href="#">PROJECTS</a></li>
             <li><a href="#">ABOUT</a></li>
@@ -22,8 +22,8 @@
         <div class="project-card">
             <img src="https://via.placeholder.com/600x400" alt="Project 1">
             <div class="project-info">
-                <h3>NAMA PROYEK 01</h3>
-                <p>Jakarta, Indonesia</p>
+                <h3>Tarbiyatul Alam Islamic School</h3>
+                <p>Karanganyar, Indonesia</p>
             </div>
         </div>
 
