--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio Minimalis | Inspirasi Andramatin</title>
+    <title>Portofolio | Nama Anda</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <nav>
-        <div class="logo">aliceclaire</div>
+        <div class="logo">NAMA ANDA</div>
         <ul>
             <li><a href="#">PROJECTS</a></li>
             <li><a href="#">ABOUT</a></li>
@@ -18,31 +18,37 @@
         </ul>
     </nav>
 
+    <section class="slider-section">
+        <div class="slider-container">
+            
+            <div class="mySlides fade">
+                <img src="images/gambar1.jpg" style="width:100%">
+                <div class="caption">PROYEK UTAMA 01</div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="images/gambar2.jpg" style="width:100%">
+                <div class="caption">PROYEK UTAMA 02</div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="images/gambar3.jpg" style="width:100%">
+                <div class="caption">PROYEK UTAMA 03</div>
+            </div>
+
+        </div>
+    </section>
+
     <main class="gallery">
         <div class="project-card">
-            <img src="https://via.placeholder.com/600x400" alt="Project 1">
+            <img src="images/proyek1.jpg" alt="Project 1">
             <div class="project-info">
-                <h3>Tarbiyatul Alam Islamic School</h3>
-                <p>Karanganyar, Indonesia</p>
+                <h3>NAMA PROYEK 01</h3>
+                <p>Lokasi, Indonesia</p>
             </div>
         </div>
+        </main>
 
-        <div class="project-card">
-            <img src="https://via.placeholder.com/600x800" alt="Project 2">
-            <div class="project-info">
-                <h3>NAMA PROYEK 02</h3>
-                <p>Bali, Indonesia</p>
-            </div>
-        </div>
-
-        <div class="project-card">
-            <img src="https://via.placeholder.com/600x400" alt="Project 3">
-            <div class="project-info">
-                <h3>NAMA PROYEK 03</h3>
-                <p>Bandung, Indonesia</p>
-            </div>
-        </div>
-    </main>
-
+    <script src="script.js"></script>
 </body>
 </html>
