--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio | Nama Anda</title>
+    <title>Portofolio | aliceclaire</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <nav>
-        <div class="logo">NAMA ANDA</div>
+        <div class="logo">aliceclaire</div>
         <ul>
             <li><a href="#">PROJECTS</a></li>
             <li><a href="#">ABOUT</a></li>
