--- a/index.html
+++ b/index.html
@@ -3,51 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio | aliceclaire</title>
+    <title>Portofolio Minimalis</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
+    <div class="bg-slider">
+        <div class="mySlides fade"><img src="BALKON.png/bg1.jpg"></div>
+        <div class="mySlides fade"><img src="MASJID.png/bg2.jpg"></div>
+        <div class="mySlides fade"><img src="SECOND FLOOR.png/bg3.jpg"></div>
+    </div>
+
     <nav>
         <div class="logo">aliceclaire</div>
         <ul>
-            <li><a href="#">PROJECTS</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="#projects">PROJECTS</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#contact">CONTACT</a></li>
         </ul>
     </nav>
 
-    <section class="slider-section">
-        <div class="slider-container">
-            
-            <div class="mySlides fade">
-                <img src="images/gambar1.jpg" style="width:100%">
-                <div class="caption">PROYEK UTAMA 01</div>
-            </div>
-
-            <div class="mySlides fade">
-                <img src="images/gambar2.jpg" style="width:100%">
-                <div class="caption">PROYEK UTAMA 02</div>
-            </div>
-
-            <div class="mySlides fade">
-                <img src="images/gambar3.jpg" style="width:100%">
-                <div class="caption">PROYEK UTAMA 03</div>
-            </div>
-
-        </div>
-    </section>
-
-    <main class="gallery">
-        <div class="project-card">
-            <img src="images/proyek1.jpg" alt="Project 1">
-            <div class="project-info">
-                <h3>NAMA PROYEK 01</h3>
-                <p>Lokasi, Indonesia</p>
-            </div>
-        </div>
-        </main>
+    <div class="hero-text">
+        <p>Architectural Portfolio</p>
+    </div>
 
     <script src="script.js"></script>
 </body>
