--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
     <div class="bg-slider">
-        <div class="mySlides fade"><img src="BALKON.png/bg1.jpg"></div>
-        <div class="mySlides fade"><img src="MASJID.png/bg2.jpg"></div>
-        <div class="mySlides fade"><img src="SECOND FLOOR.png/bg3.jpg"></div>
+        <div class="mySlides fade"><img src="images/BALKON.png/bg1.jpg"></div>
+        <div class="mySlides fade"><img src="images/MASJID.png/bg2.jpg"></div>
+        <div class="mySlides fade"><img src="images/SECOND FLOOR.png/bg3.jpg"></div>
     </div>
 
     <nav>
