--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 
     <div class="bg-slider">
-       <div class="mySlides fade"><img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab"></div>
+       <div class="mySlides fade">
+    <img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?q=80&w=2000&auto=format&fit=crop">
+</div>
         <div class="mySlides fade"><img src="images/MASJID.png"></div>
         <div class="mySlides fade"><img src="images/SECOND FLOOR.png"></div>
     </div>
