--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 </head>
 <body>
 
-    <div class="bg-slider">
-       <div class="mySlides fade"><img src="images/BALKON.png"></div>
-        <div class="mySlides fade"><img src="images/MASJID.png"></div>
-        <div class="mySlides fade"><img src="images/SECOND FLOOR.png"></div>
+   <div class="bg-slider">
+    <div class="mySlides fade" style="display: block !important;">
+        <img src="images/BALKON.png">
     </div>
-
+     <div class="mySlides fade">
+        <img src="images/MASJID.png">
+    </div>
+<div class="mySlides fade">
+        <img src="images/SECOND FLOOR.png">
+    </div>
+       
     <nav>
         <div class="logo">aliceclaire</div>
         <ul>
