--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
 </head>
 <body>
 
-   <div class="bg-slider">
-    <div class="mySlides fade" style="display: block !important;">
-        <img src="images/BALKON.png">
+    <div class="bg-slider">
+        <div class="mySlides fade"><img src="images/BALKON.png"></div>
+        <div class="mySlides fade"><img src="images/MASJID.png"></div>
     </div>
-     <div class="mySlides fade">
-        <img src="images/MASJID.png">
-    </div>
-       
+
     <nav>
-        <div class="logo">aliceclaire</div>
+        <div class="logo">NAMA ANDA</div>
         <ul>
             <li><a href="#projects">PROJECTS</a></li>
             <li><a href="#about">ABOUT</a></li>
