--- a/index.html
+++ b/index.html
@@ -3,27 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio Minimalis</title>
+    <title>Portofolio | Alice</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <div class="bg-slider">
-        <div class="mySlides fade"><img src="images/BALKON.png"></div>
-        <div class="mySlides fade"><img src="images/MASJID.png"></div>
+        <div class="mySlides fade">
+            <img src="images/BALKON.png" alt="Balkon">
+        </div>
+        <div class="mySlides fade">
+            <img src="images/MAJSID.png" alt="Project 2">
+        </div>
     </div>
 
     <nav>
-        <div class="logo">NAMA ANDA</div>
+        <div class="logo">ALICE</div>
         <ul>
-            <li><a href="#projects">PROJECTS</a></li>
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="projects.html">PROJECTS</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">CONTACT</a></li>
         </ul>
     </nav>
 
-    <div class="hero-text">
+    <div class="hero-content">
         <p>Architectural Portfolio</p>
     </div>
 
