--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio | Alice</title>
+    <title>Portofolio | Aliceclaire</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -19,7 +19,7 @@
     </div>
 
     <nav>
-        <div class="logo">ALICE</div>
+        <div class="logo">aliceclaire</div>
         <ul>
             <li><a href="projects.html">PROJECTS</a></li>
             <li><a href="#">ABOUT</a></li>
