--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio | Aliceclaire</title>
+    <title>Portofolio | Alice</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
             <img src="images/BALKON.png" alt="Balkon">
         </div>
         <div class="mySlides fade">
-            <img src="images/MAJSID.png" alt="Project 2">
+            <img src="images/MASJID.png" alt="Project 2">
         </div>
     </div>
 
