--- a/index.html
+++ b/index.html
@@ -9,13 +9,8 @@
 </head>
 <body>
 
-    <div class="bg-slider">
-        <div class="mySlides fade">
-            <img src="images/BALKON.png" alt="Balkon">
-        </div>
-        <div class="mySlides fade">
-            <img src="images/MASJID.png" alt="Project 2">
-        </div>
+    <div class="background-container">
+        <img src="images/BALKON.png" alt="Background">
     </div>
 
     <nav>
@@ -31,6 +26,5 @@
         <p>Architectural Portfolio</p>
     </div>
 
-    <script src="script.js"></script>
 </body>
 </html>
