--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
 <body>
 
     <div class="background-container">
-        <img src="images/BALKON.png" alt="Background">
+    <div class="mySlides fade">
+        <img src="images/BALKON.png">
     </div>
+    <div class="mySlides fade">
+        <img src="images/MASJID.png">
+    </div>
+    <div class="mySlides fade">
+        <img src="images/SECOND FLOOR.png">
+    </div>
+</div>
 
     <nav>
         <div class="logo">aliceclaire</div>
