--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <div class="hero-content">
         <p>Architectural Portfolio</p>
     </div>
+    
+    <script src="script.js"></script>
+</body>
+</html>
 
 </body>
 </html>
