--- a/index.html
+++ b/index.html
@@ -9,20 +9,14 @@
 </head>
 <body>
 
-    <div class="background-container">
-    <div class="mySlides fade">
-        <img src="images/BALKON.png">
-    </div>
-    <div class="mySlides fade">
-        <img src="images/MASJID.png">
-    </div>
-    <div class="mySlides fade">
-        <img src="images/SECOND FLOOR.png">
-    </div>
+   <div class="background-container">
+    <div class="mySlides"><img src="images/BALKON.png"></div>
+    <div class="mySlides"><img src="images/GAMBAR2.png"></div>
 </div>
 
+<div class="main-layer">
     <nav>
-        <div class="logo">aliceclaire</div>
+        <div class="logo">ALICE</div>
         <ul>
             <li><a href="projects.html">PROJECTS</a></li>
             <li><a href="#">ABOUT</a></li>
@@ -33,6 +27,7 @@
     <div class="hero-content">
         <p>Architectural Portfolio</p>
     </div>
+</div>
     
     <script src="script.js"></script>
 </body>
