--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
    <div class="background-container">
     <div class="mySlides"><img src="images/BALKON.png"></div>
-    <div class="mySlides"><img src="images/GAMBAR2.png"></div>
+    <div class="mySlides"><img src="images/MASJID.png"></div>
+    <div class="mySlides"><img src="images/SECOND FLOOR.png"></div>
 </div>
 
 <div class="main-layer">
     <nav>
-        <div class="logo">ALICE</div>
+        <div class="logo">aliceclaire</div>
         <ul>
             <li><a href="projects.html">PROJECTS</a></li>
             <li><a href="#">ABOUT</a></li>
