--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
 
     <div class="hero-content">
-        <p>Architectural Portfolio</p>
+        <p>PORTFOLIO</p>
     </div>
 </div>
     
