--- a/projects.html
+++ b/projects.html
@@ -22,9 +22,9 @@
 
     <div class="projects-container">
         <div class="projects-list">
-            <a href="#" class="project-item" data-img="img1">01. MODERN BALCONY</a>
-            <a href="#" class="project-item" data-img="img2">02. GRAND MOSQUE</a>
-            <a href="#" class="project-item" data-img="img3">03. SECOND FLOOR</a>
+            <a href="#" class="project-item" data-img="img1">01. Islamic School</a>
+            <a href="#" class="project-item" data-img="img2">02. Balangan Toilet</a>
+            <a href="#" class="project-item" data-img="img3">03. Timber Building</a>
         </div>
 
         <div class="projects-display">
