--- a/index.html
+++ b/index.html
@@ -34,3 +34,16 @@
 </body>
 </html>
 
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <title>Judul Portofolio Anda</title>
+    
+    
+    <link rel="icon" type="image/png" href="icon web mungkin.png">
+</head>
+<body>
+    ...
+</body>
+</html>
