--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <div class="mySlides"><img src="images/BALKON.png"></div>
     <div class="mySlides"><img src="images/MASJID.png"></div>
     <div class="mySlides"><img src="images/SECOND FLOOR.png"></div>
+
+       <div class="project-card">
+    <img src="images/islamic-school/cover.jpg" alt="Desain Islamic School Surakarta" class="project-img">
+    
+    <div class="project-content">
+        <h3>Islamic School Design</h3>
+        <p>Perancangan sekolah berbasis arsitektur Islam dengan pendekatan zonasi spasial di Surakarta.</p>
+        
+        <a href="projects/islamic-school.html" class="btn-detail">Lihat Detail Proyek &rarr;</a>
+    </div>
 </div>
 
 <div class="main-layer">
