--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class="mySlides"><img src="images/SECOND FLOOR.png"></div>
 
        <div class="project-card">
-    <img src="images/islamic-school/cover.jpg" alt="Desain Islamic School Surakarta" class="project-img">
+    <img src="images/Islamic-School-Assets/grafis sekolah.png" alt="Desain Islamic School Surakarta" class="project-img">
     
     <div class="project-content">
-        <h3>Islamic School Design</h3>
+        <h3>Tarbiyatul Alam Islamic School</h3>
         <p>Perancangan sekolah berbasis arsitektur Islam dengan pendekatan zonasi spasial di Surakarta.</p>
         
-        <a href="projects/islamic-school.html" class="btn-detail">Lihat Detail Proyek &rarr;</a>
+        <a href="projects/Islamic-School/Islamic-School-index.html" class="btn-detail">Lihat Detail Proyek &rarr;</a>
     </div>
 </div>
 
