--- a/Projects/islamic-school.html
+++ b/Projects/islamic-school.html
@@ -53,17 +53,17 @@
             <div class="gallery-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; margin-top: 20px;">
                 
                 <div class="gallery-item">
-                    <img src="../images/MASJID.png" alt="Visualisasi Masjid" style="width: 100%; height: auto; border-radius: 4px;">
+                    <img src="../images/Islamic-School-Assets/01.01.png" alt="Visualisasi Masjid" style="width: 100%; height: auto; border-radius: 4px;">
                     <p style="font-size: 0.8rem; text-align: center; color: #555;">Visualisasi Area Masjid</p>
                 </div>
 
                 <div class="gallery-item">
-                    <img src="../images/BALKON.png" alt="Area Balkon" style="width: 100%; height: auto; border-radius: 4px;">
+                    <img src="../images/Islamic-School-Assets/01.01.png" alt="Area Balkon" style="width: 100%; height: auto; border-radius: 4px;">
                     <p style="font-size: 0.8rem; text-align: center; color: #555;">Suasana Balkon & Koridor</p>
                 </div>
                 
                 <div class="gallery-item">
-                    <img src="../images/SECOND FLOOR.png" alt="Denah Lantai 2" style="width: 100%; height: auto; border-radius: 4px;">
+                    <img src="../images/Islamic-School-Assets/01.01.png" alt="Denah Lantai 2" style="width: 100%; height: auto; border-radius: 4px;">
                     <p style="font-size: 0.8rem; text-align: center; color: #555;">Denah Lantai 2</p>
                 </div>
 
