--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h3>Tarbiyatul Alam Islamic School</h3>
                 <p>Perancangan sekolah berbasis arsitektur Islam dengan pendekatan zonasi spasial di Surakarta.</p>
                 
-                <a href="projects/islamic-school.html" class="btn-detail">Lihat Detail Proyek &rarr;</a>
+                <a href="Projects/islamic-school.html" class="btn-detail">Lihat Detail Proyek &rarr;</a>
             </div>
         </div>
     </section>
