--- a/projects.html
+++ b/projects.html
@@ -21,14 +21,29 @@
     </nav>
 
     <div class="projects-container">
-        <div class="projects-list">
-            <a href="#" class="project-item" data-img="img1">01. Islamic School</a>
-            <a href="#" class="project-item" data-img="img2">02. Balangan Toilet</a>
-            <a href="#" class="project-item" data-img="img3">03. Timber Building</a>
+        <div class="project-list">
+    
+    <div class="project-item">
+        <h3>
+            <a href="projects/islamic-school.html">01. Islamic School</a>
+        </h3>
+    </div>
+
+    <div class="project-item">
+        <h3>
+            <a href="projects/balangan-toilet.html">02. Balangan Toilet</h3>
+    </div>
+
+    <div class="project-item">
+        <h3>
+            <a href="projects/timber-building.html">03. Timber Building</h3>
+    </div>
+
+</div>
         </div>
 
         <div class="projects-display">
-            <img id="img1" src="images/BALKON.png" class="project-preview active">
+            <img id="img1" src="images/Islami-School-Assets/grafis-sekolah.png" class="project-preview active">
             <img id="img2" src="images/MASJID.png" class="project-preview">
             <img id="img3" src="images/SECOND FLOOR.png" class="project-preview">
         </div>
