Fix project links to use correct casing

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
         <div class="project-list">
             
             <div class="list-item">
-                <a href="projects/islamic-school.html">
+                <a href="Projects/islamic-school.html">
                     <span class="num">01.</span> Islamic School
                 </a>
             </div>
 
             <div class="list-item">
-                <a href="#"> <span class="num">02.</span> Balangan Toilet
+                <a href="Projects/balangan-toilet.html"> <span class="num">02.</span> Balangan Toilet
                 </a>
             </div>
 
             <div class="list-item">
-                <a href="#"> <span class="num">03.</span> Timber Building
+                <a href="Projects/timber-building.html"> <span class="num">03.</span> Timber Building
                 </a>
             </div>
         </div>
