--- a/index.html
+++ b/index.html
@@ -43,3 +43,12 @@
             <div class="project-content">
                 <h3>Tarbiyatul Alam Islamic School</h3>
                 <p>Perancangan sekolah berbasis arsitektur Islam dengan pendekatan zonasi spasial di Surakarta.</p>
+                
+                <a href="projects/islamic-school.html" class="btn-detail">Lihat Detail Proyek &rarr;</a>
+            </div>
+        </div>
+    </section>
+    
+    <script src="script.js"></script>
+</body>
+</html>
