--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Tarbiyatul Alam</title>
+    <title>Projects - Education</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,8 +12,8 @@
         <section class="project-section">
             <div class="project-bg-wrapper">
                 <div class="hover-trigger-right"></div>
-                <img src="slide1.jpg" class="img-base" alt="Exterior School">
-                <img src="slide2.jpg" class="img-hover" alt="Interior Detail">
+                <img src="images/Islamic-School-Assets/grafis-sekolah.png" class="img-base" alt="Exterior School">
+                <img src="images/Islamic-School-Assets/01.01.png" class="img-hover" alt="Interior Detail">
             </div>
             
             <div class="project-content">
@@ -33,8 +33,8 @@
         <section class="project-section">
             <div class="project-bg-wrapper">
                 <div class="hover-trigger-right"></div>
-                <img src="slide3.jpg" class="img-base" alt="Staircase View">
-                <img src="slide4.jpg" class="img-hover" alt="Secondary Skin Detail">
+                <img src="images/Islamic-School-Assets/01.02.png" class="img-base" alt="Staircase View">
+                <img src="images/Islamic-School-Assets/01.03.png" class="img-hover" alt="Secondary Skin Detail">
             </div>
             
             <div class="project-content">
