--- a/projects.html
+++ b/projects.html
@@ -8,16 +8,17 @@
 </head>
 <body>
 
-    <nav class="navbar">
-        <div class="logo">LOGO</div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html" class="active">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contacts.html">Contacts</a></li>
-        </ul>
-    </nav>
+   <div class="main-layer">
+            <nav>
+                <div class="logo">aliceclaire</div>
+                <ul>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </nav>
 
+       
     <main class="project-wrapper">
         
         <section class="project-slide">
