--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="logo">aliceclaire</div>
                 <ul>
                     <li><a href="projects.html">PROJECTS</a></li>
-                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href="#">CONTACT</a></li>
                 </ul>
             </nav>
