--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 
         <div class="main-layer">
             <nav>
-                <div class="logo">aliceclaire</div>
+                <div class="logo">LOGO</div>
+
+<div class="logo">
+    <a href="index.html">aliceclaire</a> 
+</div>
                 <ul>
                     <li><a href="projects.html">PROJECTS</a></li>
                     <li><a href="about.html">ABOUT</a></li>
