--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,11 @@
 
    <div class="main-layer">
             <nav>
-                <div class="logo">aliceclaire</div>
+                <div class="logo">LOGO</div>
+
+<div class="logo">
+    <a href="index.html">TARBIYATUL ALAM</a> 
+</div>
                 <ul>
                     <li><a href="projects.html">PROJECTS</a></li>
                     <li><a href="#">ABOUT</a></li>
