--- a/projects.html
+++ b/projects.html
@@ -10,10 +10,9 @@
 
    <div class="main-layer">
             <nav>
-                <div class="logo">LOGO</div>
 
 <div class="logo">
-    <a href="index.html">TARBIYATUL ALAM</a> 
+    <a href="index.html">aliceclaire</a> 
 </div>
                 <ul>
                     <li><a href="projects.html">PROJECTS</a></li>
